# 02-practica

./: .gitignore  CMakeLists.txt  README.md
data/: reducedactionmovies.csv
exercise-file/p2ConjuntoPeliculasClion/: CMakeLists.txt
exercise-file/p2ConjuntoPeliculasClion/include/: ConjuntoPeliculas.h  Pelicula.h
exercise-file/p2ConjuntoPeliculasClion/src/: ConjuntoPeliculas.cpp  Pelicula.cpp  main.cpp
include/: ConjuntoPeliculas.h  Pelicula.h  funcionesSopa.h
scripts/bash/: build.sh  clean.sh  run.sh
scripts/win/: build.ps1  clean.ps1  run.ps1
src/: ConjuntoPeliculas.cpp  Pelicula.cpp  funcionesSopa.cpp  main.cpp
